--- a/output.css
+++ b/output.css
@@ -535,7 +535,7 @@
     justify-content: center;
     background-color: var(--color-neutral-900);
   }
-  img, svg .icon {
+  img, svg {
     height: calc(var(--spacing) * 4);
     width: calc(var(--spacing) * 4);
   }
