--- a/style.css
+++ b/style.css
@@ -182,6 +182,10 @@
     }
 
     img, svg {
-        @apply h-4 w-4 invert;
+        @apply h-4 w-4;
+    }
+
+    .invert {
+        @apply invert;
     }
 }
