--- a/css/output.css
+++ b/css/output.css
@@ -18,7 +18,6 @@
     --color-green-500: oklch(72.3% 0.219 149.579);
     --color-green-700: oklch(52.7% 0.154 150.069);
     --color-green-900: oklch(39.3% 0.095 152.535);
-    --color-sky-200: oklch(90.1% 0.058 230.902);
     --color-sky-400: oklch(74.6% 0.16 232.661);
     --color-sky-500: oklch(68.5% 0.169 237.323);
     --color-blue-400: oklch(70.7% 0.165 254.624);
@@ -68,6 +67,7 @@
     --color-bluesky: #1185FE;
     --color-pdx: #101010;
     --color-activision: #000000;
+    --color-blahaj: #4f90a6;
   }
 }
 @layer base {
@@ -349,7 +349,7 @@
     }
   }
   .blahaj {
-    background-color: var(--color-sky-200);
+    background-color: var(--color-blahaj);
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-sky-400);
