--- a/css/output.css
+++ b/css/output.css
@@ -8,33 +8,14 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-500: oklch(63.7% 0.237 25.331);
-    --color-red-600: oklch(57.7% 0.245 27.325);
-    --color-red-700: oklch(50.5% 0.213 27.518);
-    --color-orange-600: oklch(64.6% 0.222 41.116);
     --color-orange-900: oklch(40.8% 0.123 38.172);
     --color-yellow-300: oklch(90.5% 0.182 98.111);
-    --color-yellow-500: oklch(79.5% 0.184 86.047);
     --color-yellow-900: oklch(42.1% 0.095 57.708);
     --color-green-500: oklch(72.3% 0.219 149.579);
-    --color-green-700: oklch(52.7% 0.154 150.069);
     --color-green-900: oklch(39.3% 0.095 152.535);
-    --color-sky-400: oklch(74.6% 0.16 232.661);
-    --color-sky-500: oklch(68.5% 0.169 237.323);
     --color-blue-400: oklch(70.7% 0.165 254.624);
     --color-blue-500: oklch(62.3% 0.214 259.815);
-    --color-blue-600: oklch(54.6% 0.245 262.881);
-    --color-blue-700: oklch(48.8% 0.243 264.376);
-    --color-blue-800: oklch(42.4% 0.199 265.638);
-    --color-indigo-500: oklch(58.5% 0.233 277.117);
-    --color-purple-600: oklch(55.8% 0.288 302.321);
-    --color-purple-700: oklch(49.6% 0.265 301.924);
-    --color-pink-400: oklch(71.8% 0.202 349.761);
-    --color-rose-600: oklch(58.6% 0.253 17.585);
-    --color-slate-700: oklch(37.2% 0.044 257.287);
     --color-gray-500: oklch(55.1% 0.027 264.364);
-    --color-gray-700: oklch(37.3% 0.034 259.733);
-    --color-gray-800: oklch(27.8% 0.033 256.848);
-    --color-gray-900: oklch(21% 0.034 264.665);
     --color-neutral-100: oklch(97% 0 0);
     --color-neutral-700: oklch(37.1% 0 0);
     --color-neutral-800: oklch(26.9% 0 0);
@@ -244,219 +225,94 @@
     gap: calc(var(--spacing) * 5);
   }
   .hoi4 {
-    background-color: var(--color-pdx);
+    --color: var(--color-pdx);
   }
   .warno {
-    background-color: var(--color-yellow-900);
+    --color: var(--color-yellow-900);
   }
   .minecraft {
-    background-color: var(--color-green-900);
+    --color: var(--color-green-900);
   }
   .steam {
-    background-color: var(--color-steam);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-gray-700);
-      }
-    }
+    --color: var(--color-steam);
   }
   .epic {
-    background-color: var(--color-epic);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-gray-800);
-      }
-    }
+    --color: var(--color-epic);
   }
   .gog {
-    background-color: var(--color-gog);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-purple-700);
-      }
-    }
+    --color: var(--color-gog);
   }
   .playstation {
-    background-color: var(--color-ps);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-blue-800);
-      }
-    }
+    --color: var(--color-ps);
   }
   .xbox {
-    background-color: var(--color-green-500);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-green-700);
-      }
-    }
+    --color: var(--color-green-500);
   }
   .siege {
-    background-color: var(--color-yellow-300);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-yellow-500);
-      }
-    }
+    --color: var(--color-yellow-300);
   }
   .valorant {
-    background-color: var(--color-valorant);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-red-500);
-      }
-    }
+    --color: var(--color-valorant);
   }
   .rocket {
-    background-color: var(--color-blue-400);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-blue-600);
-      }
-    }
+    --color: var(--color-blue-400);
   }
   .battlefield {
-    background-color: var(--color-red-500);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-red-700);
-      }
-    }
+    --color: var(--color-red-500);
   }
   .github {
-    background-color: var(--color-github);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-gray-900);
-      }
-    }
+    --color: var(--color-github);
   }
   .discord {
-    background-color: var(--color-discord);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-indigo-500);
-      }
-    }
+    --color: var(--color-discord);
   }
   .pronoun {
-    background-color: var(--color-pronoun);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-pink-400);
-      }
-    }
+    --color: var(--color-pronoun);
   }
   .blahaj {
-    background-color: var(--color-blahaj);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-sky-400);
-      }
-    }
+    --color: var(--color-blahaj);
   }
   .gpg {
-    background-color: var(--color-gpg);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-sky-500);
-      }
-    }
+    --color: var(--color-gpg);
   }
   .onlyfans {
-    background-color: var(--color-onlyfans);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-sky-500);
-      }
-    }
+    --color: var(--color-onlyfans);
   }
   .bluesky {
-    background-color: var(--color-bluesky);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-blue-600);
-      }
-    }
+    --color: var(--color-bluesky);
   }
   .github {
-    background-color: var(--color-github);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-gray-700);
-      }
-    }
+    --color: var(--color-github);
   }
   .pinterest {
-    background-color: var(--color-pinterest);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-red-600);
-      }
-    }
+    --color: var(--color-pinterest);
   }
   .reddit {
-    background-color: var(--color-reddit);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-orange-600);
-      }
-    }
+    --color: var(--color-reddit);
   }
   .signal {
-    background-color: var(--color-signal);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-blue-500);
-      }
-    }
+    --color: var(--color-signal);
   }
   .tumblr {
-    background-color: var(--color-tumblr);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-slate-700);
-      }
-    }
+    --color: var(--color-tumblr);
   }
   .twitch {
-    background-color: var(--color-twitch);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-purple-600);
-      }
-    }
+    --color: var(--color-twitch);
   }
   .youtube {
-    background-color: var(--color-youtube);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-red-600);
-      }
-    }
+    --color: var(--color-youtube);
   }
   .xhs {
-    background-color: var(--color-xhs);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-rose-600);
-      }
-    }
+    --color: var(--color-xhs);
   }
   .mastodon {
-    background-color: var(--color-mastodon);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-indigo-500);
-      }
-    }
+    --color: var(--color-mastodon);
   }
   .activision {
-    background-color: var(--color-activision);
+    --color: var(--color-activision);
   }
   .starbreeze {
-    background-color: var(--color-orange-900);
+    --color: var(--color-orange-900);
   }
   .btn {
     display: inline-flex;
@@ -467,46 +323,22 @@
     padding-block: calc(var(--spacing) * 2);
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
+    background-color: var(--color);
   }
   .gray {
-    background-color: var(--color-gray-500);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-gray-700);
-      }
-    }
+    --color: var(--color-gray-500);
   }
   .red {
-    background-color: var(--color-red-500);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-red-700);
-      }
-    }
+    --color: var(--color-red-500);
   }
   .green {
-    background-color: var(--color-green-500);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-green-700);
-      }
-    }
+    --color: var(--color-green-500);
   }
   .blue {
-    background-color: var(--color-blue-500);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-blue-700);
-      }
-    }
+    --color: var(--color-blue-500);
   }
   .white {
-    background-color: var(--color-neutral-900);
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-neutral-700);
-      }
-    }
+    --color: var(--color-neutral-900);
   }
   .input {
     margin-inline: auto;
@@ -547,6 +379,12 @@
   .invert {
     --tw-invert: invert(100%);
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+  }
+  .btn:hover {
+    background-color: var(--color);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix( in srgb, var(--color) 80%, black 20% );
+    }
   }
 }
 @property --tw-border-style {
